# Internal-Banking-Ticketing-System

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_auth_initial.py  0002_core_domain.py  0002_tickets_ai_email.py  0003_ticket_workflow.py  0004_sla.py  0005_escalations_notifications.py  0006_audit_immutable.py  0007_first_response_sla.py
backend/app/: __init__.py  main.py
backend/app/adapters/: email_adapter.py  sms_adapter.py  storage_adapter.py
backend/app/api/v1/: deps.py
backend/app/api/v1/routes/: ai_chat.py  audit.py  auth.py  branches.py  categories.py  dashboard.py  escalations.py  health.py  mfa.py  notifications.py  sla.py  teams.py  tickets.py  users.py
backend/app/core/: config.py  exceptions.py  idempotency.py  logging.py  rate_limit.py  rbac.py  redis.py  security.py
backend/app/db/: base.py  seed.py  session.py
backend/app/middleware/: audit_context.py  metrics.py  rate_limit.py  request_context.py  security_headers.py
backend/app/models/: __init__.py  ai_interaction.py  attachment.py  audit.py  auth.py  branch.py  category.py  comment.py  email_intake.py  enums.py  escalation.py  notification.py  role.py  sla.py  team.py  ticket.py  ticket_history.py  user.py
backend/app/repositories/: audit_repo.py  branch_repo.py  category_repo.py  escalation_repo.py  notification_repo.py  sla_repo.py  team_repo.py  ticket_history_repo.py  ticket_repo.py  user_repo.py
backend/app/schemas/: ai.py  audit.py  auth.py  branch.py  category.py  dashboard.py  envelope.py  notification.py  sla.py  team.py  ticket.py  tickets.py  workflow.py
backend/app/services/: ai_service.py  audit_service.py  auth_service.py  dashboard_service.py  email_service.py  escalation_service.py  notification_service.py  routing_service.py  sla_engine.py  sla_service.py  ticket_service.py  workflow_service.py
backend/app/utils/: pagination.py  ticket_number.py
backend/app/workers/: __init__.py  email_worker.py  sla_scheduler.py  sla_worker.py
backend/scripts/: seed_admin.py
backend/tests/: conftest.py  test_ai_service.py  test_audit_service.py  test_auth_flow.py  test_dashboard.py  test_email_service.py  test_enums.py  test_frontend_contracts.py  test_health.py  test_models.py  test_rate_limit.py  test_rate_limit_stress.py  test_rbac_query.py  test_routing_service.py  test_schemas.py  test_security.py  test_security_headers.py  test_sla_fallback.py  test_sla_service.py  test_ticket_service.py  test_tickets_flow.py  test_ui_button_contracts.py  test_workflow_transitions.py
docs/: architecture.md  roadmap.md  runbook.md  security.md  workflow.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/app/: App.tsx  AppLayout.tsx  RequireAuth.tsx
frontend/src/components/: AIBadge.tsx  AIChatWidget.tsx  Badge.tsx  Button.tsx  Card.tsx  ConfirmDialog.tsx  ErrorBoundary.tsx  Logo.tsx  Modal.tsx  PriorityBadge.tsx  Ring.tsx  SLABadge.tsx  Skeleton.tsx  StatusBadge.tsx  TicketCard.tsx  Toast.tsx  UserMenu.tsx
frontend/src/components/charts/: BarChart.tsx  Donut.tsx  Sparkline.tsx
frontend/src/features/ai/: api.ts
frontend/src/features/auth/: api.ts  mfa.ts
frontend/src/features/dashboard/: api.ts
frontend/src/features/notifications/: NotificationBell.tsx  api.ts
frontend/src/features/tickets/: api.ts  types.ts  workflow.ts
frontend/src/features/tickets/components/: AssignDialog.tsx  AssignmentHistory.tsx  Attachments.tsx  CommentsThread.tsx  CreateTicketModal.tsx  StatusBadge.tsx  TicketActions.tsx
frontend/src/lib/: api.ts  cn.ts  format.ts
frontend/src/pages/: AuditPage.tsx  BranchesPage.tsx  CategoriesPage.tsx  CreateTicketPage.tsx  DashboardPage.tsx  EscalationsPage.tsx  ForbiddenPage.tsx  LoginPage.tsx  PlaceholderPage.tsx  ProfilePage.tsx  SlaPage.tsx  TeamsPage.tsx  TicketDetailPage.tsx  TicketsPage.tsx  UsersPage.tsx
frontend/src/store/: auth.ts  theme.ts
frontend/src/styles/: globals.css
infra/: docker-compose.prod.yml  docker-compose.yml
infra/nginx/: prod.conf
scripts/: smoke.sh
