[project]
name = "success-bank-backend"
version = "0.1.0"
description = "SUCCESS Bank — internal ticketing & CRM backend"
requires-python = ">=3.12"
dependencies = [
  # --- Web framework ---
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "python-multipart==0.0.9",

  # --- Validation & settings ---
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "email-validator==2.2.0",

  # --- DB ---
  "sqlalchemy[asyncio]==2.0.35",
  "asyncpg==0.29.0",
  "alembic==1.13.3",

  # --- Auth & security ---
  "argon2-cffi==23.1.0",
  "pyjwt[crypto]==2.9.0",
  "pyotp==2.9.0",

  # --- Caching / queues ---
  "redis==5.0.8",

  # --- Scheduler ---
  "apscheduler==3.10.4",

  # --- Storage ---
  "boto3==1.35.30",

  # --- Observability ---
  "structlog==24.4.0",
  "prometheus-client==0.21.0",

  # --- Misc ---
  "httpx==0.27.2",
  "tenacity==9.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "pytest-cov==5.0.0",
  "ruff==0.6.9",
  "mypy==1.11.2",
  "types-redis==4.6.0.20240903",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "S", "N", "RUF"]
ignore = ["S101"]   # allow asserts in tests

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S105", "S106"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = []
exclude = ["alembic/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
