[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "success-bank-backend"
version = "0.1.0"
description = "SUCCESS Bank — internal ticketing & CRM backend"
requires-python = ">=3.12"
dependencies = [
  # --- Web framework ---
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "python-multipart==0.0.9",

  # --- Validation & settings ---
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "email-validator==2.2.0",

  # --- DB ---
  "sqlalchemy[asyncio]==2.0.35",
  "asyncpg==0.29.0",
  "alembic==1.13.3",

  # --- Auth & security ---
  "argon2-cffi==23.1.0",
  "pyjwt[crypto]==2.9.0",
  "pyotp==2.9.0",

  # --- Caching / queues ---
  "redis==5.0.8",

  # --- Scheduler ---
  "apscheduler==3.10.4",

  # --- Storage ---
  "boto3==1.35.30",

  # --- Observability ---
  "structlog==24.4.0",
  "prometheus-client==0.21.0",

  # --- Misc ---
  "httpx==0.27.2",
  "tenacity==9.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "pytest-cov==5.0.0",
  "ruff==0.6.9",
  "mypy==1.11.2",
  "types-redis==4.6.0.20240903",
  # SQLite async driver — used by the CI test DATABASE_URL and as a
  # lightweight fallback for unit tests that don't need postgres.
  "aiosqlite==0.20.0",
]

[tool.setuptools.packages.find]
# Only ship the application package; alembic + tests + dist are
# discovered as top-level otherwise and crash editable builds.
include = ["app*"]
exclude = ["alembic*", "tests*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "S", "N", "RUF"]
ignore = [
  "S101",   # allow asserts (esp. in tests)
  "B008",   # FastAPI idiom: Depends(...) / Query(...) in defaults
  "RUF012", # SQLAlchemy mapped columns with default=dict / default=list
  "N818",   # AppException is the project's base class name on purpose
]

[tool.ruff.lint.per-file-ignores]
"tests/*"           = ["S105", "S106", "S104"]
"app/core/config.py" = ["S104"]       # APP_HOST defaults to 0.0.0.0 for Docker
"app/main.py"        = ["S104"]
"alembic/*"          = ["E501", "F401", "N999"]
"app/db/seed.py"     = ["E501"]       # aligned-column demo strings

[tool.mypy]
python_version = "3.12"
# Pragmatic mypy: we want signal on real bugs (undefined names,
# argument mismatches) without the strict-mode chatter on
# FastAPI / SQLAlchemy dynamic surfaces.
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_no_return = true
check_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
disable_error_code = ["import-untyped", "name-defined"]
plugins = []
exclude = ["alembic/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
